<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Expense Manager</string>
    <string name="category_name_text">Name: </string>
    <string name="category_color_text">Color: </string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_title">Expense Manager</string>
    <string name="add_expense_button_text">Add Expense</string>
    <string name="history_btn_text">History</string>
    <string name="summary_btn_text">Summary</string>
    <string name="limits_btn_text">Limits</string>
    <string name="exit_btn_text">Exit</string>
    <string name="add_expense_title_text">Add Expense</string>
    <string name="date_text">Date: </string>
	<string name="amount_text">Amount: </string>
	<string name="category_text">Category: </string>
	<string name="description_hint">Enter Description</string>
	<string name="description_text">Description: </string>
	<string name="amount_hint">Enter amount</string>
	<string name="date_hint">Enter date</string>
	<string name="add_btn_text">Add</string>
	<string name="cancel_btn_text">Cancel</string>
	<string name="summary_title">Summary</string>
	<string name="category_title">Category</string>
	<string name="history_title">History</string>
	<string name="settings_text">Settings</string>
	<string name="total_expense_text">Rs. 2930</string>
	<string name="total_savings_label_text">Total Savings</string>
	<string name="monthly_savings_label_text">Monthly Savings</string>
	<string name="settings_title">Settings</string>
	<string name="reminder_text">Daily Reminder</string>
	<string name="category_name_hint">Enter category name</string>
	<string name="currency_text">Currency</string>
	<string name="clear_text">Clear</string>
	<string name="limit_text">"Limit: "</string>
	<string name="ok_btn_text">OK</string>
	<string name="delete_btn_text">Delete</string>
	<string name="add_category">Add Category</string>
	<string name="edit_category_title">Edit Category</string>
</resources>
