<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="top"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txtAddExpenseTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/add_expense_title_text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000000" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/txtAddExpenseTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" >

        <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dividerPadding="5dp"
            android:padding="15dp"
            android:stretchColumns="0,1" >

            <TableRow android:layout_marginTop="5dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|left"
                    android:text="@string/date_text"
                    android:textColor="@color/black"
                    android:textSize="22sp" />

                <EditText
                    android:id="@+id/etxtDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/date_hint"
                    android:inputType="date" />
            </TableRow>

            <TableRow android:layout_marginTop="5dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|left"
                    android:text="@string/amount_text"
                    android:textColor="@color/black"
                    android:textSize="22sp" />

                <EditText
                    android:id="@+id/etxtAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/amount_hint"
                    android:inputType="numberDecimal" />
            </TableRow>

            <TableRow android:layout_marginTop="5dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|left"
                    android:text="@string/category_text"
                    android:textColor="@color/black"
                    android:textSize="22sp" />

                <Spinner
                    android:id="@+id/spinCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown" />
            </TableRow>

            <TableRow android:layout_marginTop="5dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|left"
                    android:text="@string/description_text"
                    android:textColor="@color/black"
                    android:textSize="22sp" />

                <EditText
                    android:id="@+id/etxtDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/description_hint"
                    android:inputType="textMultiLine" />
            </TableRow>

            <TableRow android:layout_marginTop="10dp" >

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel_btn_text" />

                <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_btn_text" />
            </TableRow>
        </TableLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txtAddExpenseTitle"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:contentDescription="@android:string/cancel"
        android:src="@android:drawable/ic_delete" />

</RelativeLayout>