<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/app_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000000" />

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/txtTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:dividerPadding="10dp" 
        android:stretchColumns="0,1">

       <TableRow >

            <Button
                android:id="@+id/btnAddExpense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:height="110dp"
                android:onClick="addExpense"
                android:text="@string/add_expense_button_text"
                android:width="110dp" />

            <Button
                android:id="@+id/btnSummary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:height="110dp"
                android:text="@string/summary_btn_text"
                android:width="110dp" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btnHistory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:height="110dp"
                android:text="@string/history_btn_text"
                android:width="110dp" />

            <Button
                android:id="@+id/btnLimits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:height="110dp"
                android:text="@string/limits_btn_text"
                android:width="110dp" />
        </TableRow>

        <Button
            android:id="@+id/btnExit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="exit"
            android:text="@string/exit_btn_text" />
    </TableLayout>

</RelativeLayout>