<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txtEditCategoryTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/edit_category_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/black" />

    <TableLayout
        android:id="@+id/tlCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtEditCategoryTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:dividerPadding="5dp"
        android:padding="5dp"
        android:stretchColumns="0,1" >

        <TableRow>

            <TextView
                android:id="@+id/txtCategoryName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/category_name_text"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etxtCategoryName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:hint="@string/category_name_hint"
                android:inputType="text"
                android:singleLine="true" />
        </TableRow>

        <TableRow android:layout_marginTop="10dp" >

            <TextView
                android:id="@+id/txtCategoryColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/category_color_text"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinCategoryColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tlCategory"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <Button
            android:id="@+id/btnCancelEditCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:text="@string/cancel_btn_text" />

        <Button
            android:id="@+id/btnAddEditCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/add_btn_text" />

        <Button
            android:id="@+id/btnDeleteCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:clickable="false"
            android:text="@string/delete_btn_text" />
    </LinearLayout>

</RelativeLayout>