<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background" >

    <TextView
        android:id="@+id/txtCategoryTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/category_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000000" />

    <View
        android:id="@+id/categorydivider0"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/txtCategoryTitle"
        android:layout_marginTop="30dp"
        android:background="@color/black" />

    <RelativeLayout
        android:id="@+id/llAddCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/categorydivider0"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" 
        android:paddingTop="15dp"
        android:paddingBottom="15dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" >

            <ImageView
                android:id="@+id/ImageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/add_btn_text"
                android:src="@android:drawable/ic_input_add" />

            <TextView
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/add_category"
                android:textSize="20sp" >
            </TextView>
        </LinearLayout>
    </RelativeLayout>

    <View
        android:id="@+id/categorydivider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/llAddCategory"
        android:background="@color/black" />

    <ListView
        android:id="@+id/lvCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/categorydivider1" />

    <View
        android:id="@+id/categorydivider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/lvCategory"
        android:background="@color/black" />

</RelativeLayout>